background image test

--- a/laketopia_v.html
+++ b/laketopia_v.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+ <style>
+body {
+  background-image: url('forrestrodeman.github.io/background.jpg');
+}
+</style> 
+
 <title>Memorial Day Camping AKA LAKETOPIA V</title>
 </head>
 <body>
