more background image test

--- a/laketopia_v.html
+++ b/laketopia_v.html
@@ -3,7 +3,7 @@
 <head>
  <style>
 body {
-  background-image: url('forrestrodeman.github.io/background.jpg');
+  background-image: url('background.jpg');
 }
 </style> 
 
@@ -37,7 +37,7 @@ body {
 <p>Kaiser pass road opens on Saturday May 25 so in the morning we will get up early and caravan over to set up in the meadow. It's not a campsite with toilets or anything, just a big field where we probably won't be disturbed my monster trucks. There is usually a little bit of messing around and argueing over where exactly to camp.  </p>
  
 <h2>RSVP</h2>
-<p>Text forrest with who all is coming and your car situation. We'll make a group text nearer the data and organize carpools, tents, etc.  </p> 
+<p>Text forrest with who all is coming and your car situation. We'll make a group text nearer the date and organize carpools, tents, etc.  </p> 
 <h4>Why the fuck do i have to RSVP to a camping trip?</h4>
 <p>Because we are probably gonna do some group dinners and drinks and such. We need to know how many bagels to bring, if you are vegan, or if you eat butter right off the stick.  </p>
 
