melon_rubric fix

--- a/laketopia_v.html
+++ b/laketopia_v.html
@@ -12,7 +12,7 @@
 <p>aka Memorial day camping trip. </p>
 
 <h2>Price of admission</h2>
-<p>ONE WATERMELON PER PERSON!!! NO EXCEPTIONS!! BETTER BE A GOOD FUCKING WATERMELON!!! Your watermelon will be scored by a panel of judges. The scoring rubric can be found <a href="forrestrodeman.github.io/melon_rubric.png">here.</a> </p>
+<p>ONE WATERMELON PER PERSON!!! NO EXCEPTIONS!! BETTER BE A GOOD FUCKING WATERMELON!!! Your watermelon will be scored by a panel of judges. The scoring rubric can be found <a href="melon_rubric.png">here.</a> </p>
 
 <h2>Dates</h2>
 <p>Friday May 24 thru Monday May 27. </p>
