--- a/laketopia_v.html
+++ b/laketopia_v.html
@@ -15,24 +15,21 @@
 <p>ONE WATERMELON PER PERSON!!! NO EXCEPTIONS!! BETTER BE A GOOD FUCKING WATERMELON!!! Your watermelon will be scored by a panel of judges. The scoring rubric can be found <a href="melon_rubric.png">here.</a> </p>
 
 <h2>Dates</h2>
-<p>Friday May 24 thru Monday May 27. </p>
-
-<h2>Location</h2>
-<p>Jackass Meadow or thereabouts </p>
+<p>Friday May 24 thru Monday May 27. Some santa cruz cars may leave friday around noon to get a good spot before dark.</p>
 
 <h2>Clinics</h2>
 <p>Think of a clinic you want to put on. Nothing too serious. In the past we have had naked slacklining, figure drawing, watercolor, nature walks, rock climbing, beach party, and yoga. </p>
-
-<h2>Rendezvous</h2>
-<p>Friday May 24 8PM 
-<a href="https://maps.app.goo.gl/Mtq5fJgLTS7v7NURA">in this area.</a> Kaiser pass road won't be open yet so we will meet here.
- </p>
  
 <h2>Final Location</h2>
-<p>Kaiser pass road opens on Saturday May 25 so in the morning we will get up early and caravan over to set up in the meadow. It's not a campsite with toilets or anything, just a big field where we probably won't be disturbed my monster trucks. There is usually a little bit of messing around and argueing over where exactly to camp.  </p>
+<p>Kaiser pass road opens on thursday or friday so we can head straight to jackass meadow. It's not a campsite with toilets or anything, just a big field where we probably won't be disturbed my monster trucks. There is usually a little bit of messing around and argueing over where exactly to camp. <p><a href="https://caltopo.com/m/GVVSS">CalTopo with some info!</a></p>
+ </p>
+
+<h2>How to get there</h2>
+<p>Drive up to the east end of huntington lake and take kaiser pass road (east). It's long and windy and narrow. After around 22.5miles, turn left onto a road towards Jackass Meadow Campground. Before the campground, turn left onto Hooper Diversion OHV Route. 
+Or, if you are a modern human, map yourself to 37.2828, -118.9626. Be warned there is no service out there. </p>
  
 <h2>RSVP</h2>
-<p>Text forrest with who all is coming and your car situation. We'll make a group text nearer the date and organize carpools, tents, etc.  </p> 
+<p>Fill out the sheet!  </p> 
 <h4>Why the fuck do i have to RSVP to a camping trip?</h4>
 <p>Because we are probably gonna do some group dinners and drinks and such. We need to know how many bagels to bring, if you are vegan, or if you eat butter right off the stick.  </p>
 
